fix(take_time_processor): 调整生成类的代码逻辑